; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_json_array_append_null.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_json_array_append_null.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JSONFailure = common dso_local global i64 0, align 8
@JSONSuccess = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @json_array_append_null(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i32* (...) @json_value_init_null()
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i64, i64* @JSONFailure, align 8
  store i64 %9, i64* %2, align 8
  br label %22

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @json_array_append_value(i32* %11, i32* %12)
  %14 = load i64, i64* @JSONFailure, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %10
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @json_value_free(i32* %17)
  %19 = load i64, i64* @JSONFailure, align 8
  store i64 %19, i64* %2, align 8
  br label %22

20:                                               ; preds = %10
  %21 = load i64, i64* @JSONSuccess, align 8
  store i64 %21, i64* %2, align 8
  br label %22

22:                                               ; preds = %20, %16, %8
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}

declare dso_local i32* @json_value_init_null(...) #1

declare dso_local i64 @json_array_append_value(i32*, i32*) #1

declare dso_local i32 @json_value_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
